--- a/Lab4/Lab4/Lab4.csproj
+++ b/Lab4/Lab4/Lab4.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataClasses1DataContext.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +57,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Lab4_QuanLyThuVienDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Lab4_QuanLyThuVienDataSet11.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Lab4_QuanLyThuVienDataSet11.xsd</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,6 +87,17 @@
     </None>
     <None Include="Lab4_QuanLyThuVienDataSet.xss">
       <DependentUpon>Lab4_QuanLyThuVienDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Lab4_QuanLyThuVienDataSet11.xsc">
+      <DependentUpon>Lab4_QuanLyThuVienDataSet11.xsd</DependentUpon>
+    </None>
+    <None Include="Lab4_QuanLyThuVienDataSet11.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Lab4_QuanLyThuVienDataSet11.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Lab4_QuanLyThuVienDataSet11.xss">
+      <DependentUpon>Lab4_QuanLyThuVienDataSet11.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
