--- a/Lab4/Lab4/Properties/Settings.settings
+++ b/Lab4/Lab4/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=DESKTOP-9188G78\SQLEXPRESS;Initial Catalog=Lab4_QuanLyThuVien;Integrated Security=True;TrustServerCertificate=True</Value>
     </Setting>
+    <Setting Name="Lab4_QuanLyThuVienConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Lab4_QuanLyThuVien;Integrated Security=True;TrustServerCertificate=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Lab4_QuanLyThuVien;Integrated Security=True;TrustServerCertificate=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
